# Euroleague_Prediction_Model

./: .gitignore  README.md  TECHNICAL_DESIGN.md  analytiko_plano_euroleague_model.txt  app.py  data_engineering_log.md  eval_check.py  model_upgrade_log.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: daily_update.yml
data_cache/: feat_elo_current_E2025.json  feat_games_E2023.pkl  feat_games_E2024.pkl  feat_games_E2025.pkl  feat_possessions_E2023.pkl  feat_possessions_E2024.pkl  feat_possessions_E2025.pkl  feat_team_game_E2023.pkl  feat_team_game_E2024.pkl  feat_team_game_E2025.pkl  feat_team_ratings_E2023.pkl  feat_team_ratings_E2024.pkl  feat_team_ratings_E2025.pkl  raw_boxscore_E2023.pkl  raw_boxscore_E2024.pkl  raw_boxscore_E2025.pkl  raw_clubs_v3.pkl  raw_gamecodes_E2023.pkl  raw_gamecodes_E2024.pkl  raw_gamecodes_E2025.pkl  season_summary_E2023.json  season_summary_E2024.json  season_summary_E2025.json
models/: metadata.json  nn_classifier.joblib  nn_regressor.joblib  rf_classifier.joblib  rf_regressor.joblib  scaler.joblib
models/baseline/: metadata.json
outputs/: round_29_predictions.csv
pages/: 1_Daily_Predictions.py  2_What_If_Simulator.py
scripts/: build_team_registry.py  compare_calibration.py  dump_el_teams.py  explore_proballers.py  explore_proballers2.py  find_berlin.py  find_proballers_ids.py  predict_next_round.py  scrape_domestic_history.py  update_data.py
src/euroleague_sim/: __init__.py  cli.py  config.py  (+1 more)
src/euroleague_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+22 files in other folders)
