[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "euroleague-sim"
version = "0.3.0"
description = "Euroleague next-round predictions: RF + XGBoost + NN ensemble + Monte Carlo simulations"
requires-python = ">=3.10"
dependencies = [
  "euroleague-api>=0.0.21",
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "tqdm>=4.66",
  "python-dateutil>=2.9",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
euroleague-sim = "euroleague_sim.cli:main"
